added version cmd
