# pkg/gen/k9server/server/operations/info/get_version_parameters.go
@@ -1,0 +1,42 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package info
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// NewGetVersionParams creates a new GetVersionParams object
+// with the default values initialized.
+func NewGetVersionParams() GetVersionParams {
+	var ()
+	return GetVersionParams{}
+}
+
+// GetVersionParams contains all the bound params for the get version operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getVersion
+type GetVersionParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls
+func (o *GetVersionParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
